--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,3 +303,11 @@ p.description {
   margin-top: 15px;
   font-size: 13px;
 }
+
+/*********
+* ARTISTS *
+**********/
+
+.content img{
+  margin: 1em 1em 0em 0em;
+}
