--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -2,7 +2,7 @@
 
 /* General Demo Style */
 @font-face {
-  font-family: 'icons';
+  /*font-family: 'icons';*/
   src: url('fonts/icons.eot');
   src: url('fonts/icons.eot?#iefix') format('embedded-opentype'),
        url('fonts/icons.woff') format('woff'),
@@ -10,7 +10,7 @@
        url('fonts/icons.svg#icons') format('svg');
   font-weight: normal; font-style: normal;
 }
-
+/*
 body{
 	font-family: 'Open Sans Condensed','Arial Narrow', serif;
 	background: #ddd url(../images/bg.jpg) repeat top left;
@@ -19,7 +19,7 @@ body{
 	color: #333;
 	overflow-y: scroll;
 	overflow-x: hidden;
-}
+}*/
 a{
 	color: #555;
 	text-decoration: none;
